--- a/PhotoManager/App.config
+++ b/PhotoManager/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PhotoManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <PhotoManager.Properties.Settings>
+            <setting name="SourcePath" serializeAs="String">
+                <value>C:\</value>
+            </setting>
+            <setting name="BackupPath" serializeAs="String">
+                <value>C:\</value>
+            </setting>
+            <setting name="Prefix" serializeAs="String">
+                <value>_</value>
+            </setting>
+            <setting name="BackupEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="TimestampFormat" serializeAs="String">
+                <value>yyyyMMdd-HHmmss</value>
+            </setting>
+        </PhotoManager.Properties.Settings>
+    </userSettings>
 </configuration>
