+ naming algorithm altered

--- a/PhotoManager/App.config
+++ b/PhotoManager/App.config
@@ -25,6 +25,9 @@
             <setting name="TimestampFormat" serializeAs="String">
                 <value>yyyyMMdd-HHmmss</value>
             </setting>
+            <setting name="Suffix" serializeAs="String">
+                <value>_</value>
+            </setting>
         </PhotoManager.Properties.Settings>
     </userSettings>
 </configuration>
